# akizora

./: .python-version  Makefile  Untitled.ipynb  aa_jp.md  clame.md  foo.toml  old_.toml  pelicanconf.py  publishconf.py  pyproject.toml  second.py  slack.pass  tag_tutorial-Copy1.ipynb  tag_tutorial-Copy2.ipynb  tasks.py  trial.py
books/: 2024-04-10_standardebooks_repositories.json  easy_readable_books.json  trial_standardebooks_repositories.json
horizon_trial/: data_structure.py  tag.py  test_data_structure.py  test_tag.py
old_src/: a.py  b.py  c.py  d.py  e.py  example.py  foo.py  google_tiral.py  main_text.txt  processed_novel.json  save_sentence_json.py  sentences.json
output/: archives.html  authors.html  categories.html  index.html  tags.html  (+1 more)
src/: '  aozora.py  book_domain.py  condition_jp.md  data_structure.py  llm_domain.py  logger_config.py  minimum.txt  old_data_structure.py  pyproject.toml  tag.py  tag_process.py  tag_to_book.py  test_data_structure.py  test_tag.py  translate_domain.py  trial.py
src/data_adapter/: book_content_parser.py  estandard_books.py  standard_ebook_toc.py  target_book_selection.py  trial.py
src/domain/: book.py  componet.py  tag.py  translation.py
src/research/: book_content_checker.py  book_content_parser.py  divide_with_nest_deep.py  old_standard_ebook_toc.py  standard_ebook_toc.py
src/scrayping/: estandard.py  github_api.py  gutenberg.py  standard_ebooks.py
src/src/src/: __init__.py  __main__.py
src/text_process/: aa_jp.md  raw_text_process.py  trial_standard_ebook_toc.py
src/utils/: data_io.py  logger_config.py
(+153 files in other folders)
